--- a/class_00_github_computing_setup.ipynb
+++ b/class_00_github_computing_setup.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "ba239985",
    "metadata": {},
    "source": [
     "# Class 0: Introduction to the Course, Github, Computing Setup"
@@ -9,6 +10,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "65a79e16",
    "metadata": {},
    "source": [
     "Goal of today's class:\n",
@@ -19,6 +21,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "27d46adf",
    "metadata": {},
    "source": [
     "**Welcome to PHYS 7332 - Network Science Data II**"
@@ -26,6 +29,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7de567ea",
    "metadata": {},
    "source": [
     "_________________"
@@ -33,6 +37,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bfa8e7c0",
    "metadata": {},
    "source": [
     "## How The Course Works\n",
@@ -52,6 +57,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c2f65c37",
    "metadata": {},
    "source": [
     "### Course Materials\n",
@@ -67,6 +73,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c10e5b78",
    "metadata": {},
    "source": [
     "## Class Expectations\n",
@@ -78,6 +85,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3dd16aa9",
    "metadata": {},
    "source": [
     "## Coursework, Class Structure, Grading\n",
@@ -105,6 +113,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2f0c4229",
    "metadata": {},
    "source": [
     "## What You'll Learn\n",
@@ -175,6 +184,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "72b2e60d",
    "metadata": {},
    "source": [
     "________________"
@@ -182,6 +192,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e58fbef0",
    "metadata": {},
    "source": [
     "## Discovery Cluster\n",
@@ -202,6 +213,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dff1d3d7",
    "metadata": {},
    "source": [
     "### Open OnDemand (OOD)\n",
@@ -226,6 +238,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e7aaebd1",
    "metadata": {},
    "source": [
     "___________\n",
@@ -235,6 +248,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "17319bfe",
    "metadata": {},
    "source": [
     "_________________"
@@ -242,6 +256,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b8a3a4b7",
    "metadata": {},
    "source": [
     "### Jupyter Notebook Server\n",
@@ -250,6 +265,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3771a635",
    "metadata": {},
    "source": [
     "### Virtual Environment\n",
@@ -277,6 +293,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0a40b565",
    "metadata": {},
    "source": [
     "_________"
@@ -284,6 +301,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6250d659",
    "metadata": {},
    "source": [
     "## GitHub\n",
@@ -292,7 +310,7 @@
     "\n",
     "On Github, you'll keep your code in what's called a *repository*. That's a chunk of code that all works together. You can download a repository to your own computer, make changes to it, and *push* them to the repository on GitHub. Then your changes will be reflected in the version of the repository that's on GitHub, and anyone can download the version with your changes in it. \n",
     "\n",
-    "Our class has a repository that's available [here](https://github.com/asmithh/network-science-data-book). You will download a *fork* of the repository to make your very own. Occasionally we'll update the repository and you'll need to incorporate the updates; we'll explain how to do that in a second. \n",
+    "Our class has a repository that's available [here](https://github.com/asmithh/student-network-science-data-book). You will download a *fork* of the repository to make your very own. Occasionally we'll update the repository and you'll need to incorporate the updates; we'll explain how to do that in a second. \n",
     "\n",
     "#### Forking and Maintaining The Class Repository\n",
     "First, let's fork the repository. Go to the repository GitHub link. You'll see a little icon on the top left that says \"Fork\". Click on it:\n",
@@ -311,7 +329,7 @@
     "Now let's set up a way to get updates from the original repo. Let's `cd` into the repo: \n",
     "`cd REPO_FILEPATH`\n",
     "\n",
-    "`git remote add upstream git@github.com:asmithh/network-science-data-book.git`\n",
+    "`git remote add upstream git@github.com:asmithh/student-network-science-data-book.git`\n",
     "\n",
     "`git fetch upstream`\n",
     "\n",
@@ -334,6 +352,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5f698250",
    "metadata": {},
    "source": [
     "### Final step: Start a Jupyter Lab instance!\n",
@@ -347,6 +366,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1666a642",
    "metadata": {},
    "source": [
     "_____\n",
@@ -358,6 +378,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "778f78e0",
    "metadata": {},
    "source": [
     "__________"
@@ -365,6 +386,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5390e6ba",
    "metadata": {},
    "source": [
     "## Next time...\n",
@@ -373,6 +395,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "00bcc359",
    "metadata": {},
    "source": [
     "_________"
@@ -380,6 +403,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "68673f6a",
    "metadata": {},
    "source": [
     "# References and further resources:\n",
@@ -395,6 +419,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ed0bd8a8",
    "metadata": {},
    "source": [
     "_________________"
@@ -403,7 +428,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -417,7 +442,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
