adding cd command to class 00 cloning

--- a/class_00_github_computing_setup.ipynb
+++ b/class_00_github_computing_setup.ipynb
@@ -323,6 +323,9 @@
     "Then you'll clone your fork in the Discovery terminal using the URL obtained via the green `Code` buttion:\n",
     "![a screenshot of the clone button](images/github_clone_repo.png)\n",
     "\n",
+    "We're going to first navigate to your folder in our course partition:\n",
+    "\n",
+    "`/courses/PHYS7332.202510/students/USERNAME` where `USERNAME` is your Northeastern username. Then we'll clone the repo:\n",
     "\n",
     "`git clone [URL YOU COPIED]`\n",
     "\n",
@@ -338,7 +341,7 @@
     "`git merge upstream/main`\n",
     "\n",
     "\n",
-    "This sets up the original version of the GitHub repo as an upstream source. Now we can, at any point, fetch the upstream source and merge it into our main branch, which is the main branch of your forked repository. You'll be working in this forked repository in your `/courses/students/USERNAME` directory throughout the course. If you want to sync your forked version with the original version (as we will be adding new notebooks over the course of the class), you can run the following commands:\n",
+    "This sets up the original version of the GitHub repo as an upstream source. Now we can, at any point, fetch the upstream source and merge it into our main branch, which is the main branch of your forked repository. You'll be working in this forked repository in your `/courses/PHYS7332.202510/students/USERNAME` directory throughout the course. If you want to sync your forked version with the original version (as we will be adding new notebooks over the course of the class), you can run the following commands:\n",
     "\n",
     "`git fetch upstream`\n",
     "\n",
