adding cd command to class 00 cloning

--- a/class_00_github_computing_setup.ipynb
+++ b/class_00_github_computing_setup.ipynb
@@ -325,7 +325,7 @@
     "\n",
     "We're going to first navigate to your folder in our course partition:\n",
     "\n",
-    "`/courses/PHYS7332.202510/students/USERNAME` where `USERNAME` is your Northeastern username. Then we'll clone the repo:\n",
+    "`cd /courses/PHYS7332.202510/students/USERNAME` where `USERNAME` is your Northeastern username. Then we'll clone the repo:\n",
     "\n",
     "`git clone [URL YOU COPIED]`\n",
     "\n",
