--- a/class_00_github_computing_setup.ipynb
+++ b/class_00_github_computing_setup.ipynb
@@ -420,6 +420,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c79fc6ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# halp"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ed0bd8a8",
    "metadata": {},
