--- a/class_00_github_computing_setup.ipynb
+++ b/class_00_github_computing_setup.ipynb
@@ -430,6 +430,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "c774f6a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ed0bd8a8",
    "metadata": {},
