adding github fix

--- a/class_00_github_computing_setup.ipynb
+++ b/class_00_github_computing_setup.ipynb
@@ -380,6 +380,38 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c4063e2f",
+   "metadata": {},
+   "source": [
+    "## Fixing Github Problems & Creating a One-Stop Shop For Git Updates\n",
+    "We're going to go through a series of steps to hopefully make updating the Github repo less of a pain in the butt in the long run!\n",
+    "\n",
+    "### Setting up SSH Keys with GitHub\n",
+    "First we're going to set up SSH keys on Discovery and put them on GitHub. This lets us authenticate our identity to GitHub and makes it possible for us to push our changed code to our forked repository. Neat! First, let's follow the tutorial [here](https://docs.github.com/en/authentication/connecting-to-github-with-ssh/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent) to create SSH keys, because they explain it way better than I can. \n",
+    "Then you'll add your **public SSH key** (the file that ends in `.pub`) to GitHub using [these instructions](https://docs.github.com/en/authentication/connecting-to-github-with-ssh/adding-a-new-ssh-key-to-your-github-account). Label them something memorable, like `discovery key`, so you'll know which machine(s) it's attached to.\n",
+    "\n",
+    "### Syncing the Fork\n",
+    "Now we're going to sync our forked repository with the main student repository that I own. We can do this on GitHub, which is neat! This will incorporate all the fancy changes I made (okay, it's basically one script) and let us test out the git update script. Go to your forked repository on GitHub; you'll see a button that says `Sync fork`. Click on that; your screen should look something like this. \n",
+    "\n",
+    "![](images/sync_fork.png)\n",
+    "\n",
+    "Click the green button (`Update branch`) to sync your fork with the main repository. Don't discard any commits you may have made.\n",
+    "\n",
+    "### Going to Discovery and Trying This Weird Script\n",
+    "Next we'll go to Discovery and pull our new changes using `git pull origin main`. You should see a new file come up that is labeled `git_fixer.py`. That is going to (hopefully) be our new best friend for the near future. \n",
+    "\n",
+    "Now, make some modifications to `class_00_github_computing_setup.ipynb`. You can just add comments at the end or get fancier; do what your heart desires. \n",
+    "\n",
+    "Next, we'll run `python3 git_fixer.py`. If this script works well enough, it should create a version of any files that you've modified from the original that have `MODIFIED_{a bunch of numbers}.ipynb` at the end of the filename. It will also update any files that have been modified on my end and add any new files that I've created in my repository. \n",
+    "\n",
+    "Finally, run `git status`. You may need to add and commit the changes to **your fork** so you have your modified notebooks (ideally with your notes and added code) on GitHub in your forked repository. Then push them (`git push origin main`) so they're reflected in your forked repository. \n",
+    "\n",
+    "### Going Forward\n",
+    "At the beginning of each class, run `git_fixer.py` to make sure you have all the new code for the upcoming classes. Then you will run `git status` and add/commit/push any changes you wish to see reflected in your forked repository. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "778f78e0",
    "metadata": {},
    "source": [
