--- a/class_09_datascience2.ipynb
+++ b/class_09_datascience2.ipynb
@@ -69,6 +69,7 @@
    },
    "outputs": [],
    "source": [
+    "# my edit\n",
     "from sqlalchemy import create_engine\n",
     "import pandas as pd\n",
     "\n",
