--- a/class_08_datascience1.ipynb
+++ b/class_08_datascience1.ipynb
@@ -1868,7 +1868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "id": "cc5610e5",
    "metadata": {
     "mystnb": {
@@ -1907,7 +1907,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
+   "id": "62398fbf-8de8-4c11-8af7-56788bb4727c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Tables_in_PHYS7332</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>fla_foodweb</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>fla_species</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>reddit_hyperlinks</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Tables_in_PHYS7332\n",
+       "0        fla_foodweb\n",
+       "1        fla_species\n",
+       "2  reddit_hyperlinks"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qu = \"\"\"SHOW TABLES\"\"\"\n",
+    "pd.read_sql(qu, engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "ff40f0a7",
    "metadata": {
     "mystnb": {
@@ -2034,7 +2098,7 @@
        "[128 rows x 3 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2054,7 +2118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "id": "f80100ba",
    "metadata": {
     "mystnb": {
@@ -2132,7 +2196,7 @@
        "4        4        Big Diatoms (>20um)     NULL"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2152,7 +2216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "id": "93668182",
    "metadata": {
     "mystnb": {
@@ -2251,7 +2315,7 @@
        "7       98  Other Pelagic Fishes  Pelagic Fishes"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2271,7 +2335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 8,
    "id": "904d33df",
    "metadata": {
     "mystnb": {
@@ -2335,7 +2399,7 @@
        "2       98  Other Pelagic Fishes  Pelagic Fishes"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2355,7 +2419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 9,
    "id": "fbeddec8",
    "metadata": {
     "mystnb": {
@@ -2411,7 +2475,7 @@
        "2  Seagrass Producer"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
