--- a/assignments/graph similarities/code.ipynb
+++ b/assignments/graph similarities/code.ipynb
@@ -5,9 +5,45 @@
    "id": "cc082d74-4596-4e0e-abba-86789f6d208c",
    "metadata": {},
    "source": [
-    "# Graph Similiarity Measures\n",
+    "# Graph Similarity Measures\n",
     "\n",
-    "Some intro to motivate why this is important"
+    "Goal of today's class:\n",
+    "\n",
+    "1. Understand the basic concept of graph similarity\n",
+    "2. Implement and analyze different similarity measures\n",
+    "3. Develop an intuition for what some similarity measures are telling us and when they might be appropriate to use\n",
+    "4. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e35db28-04d2-4258-893c-68b3984fdf60",
+   "metadata": {},
+   "source": [
+    "### We want your final projects to showcase your ability to distill the following:\n",
+    "1. Your understanding of a topic not covered in class\n",
+    "2. Your accuracy in creating *correct* code around your topic, along with a strong reference list\n",
+    "3. Your ability to convey your understanding via:\n",
+    "    - A) Chunking the information into a single lesson that builds on itself (e.g. breaking down complex functions into parts, putting the pieces together, using different examples to illustrate your methods)\n",
+    "    - B) Good examples / visuals / writeups of what results produced during the lesson / datasets used to illustrate your concept\n",
+    "    - C) At least one interactive component (i.e., the \"Your Turn!\" in our lessons)\n",
+    "\n",
+    "Much like in our lessons, it's okay to include more than you imagine covering in a (hypothetical) 90 minute class period. Be sure to indicate what sections of your chapter are \"advanced topics\", and always include relevant citations or motivation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88316dd7-4fcf-49f6-bd28-fff4200bad0f",
+   "metadata": {},
+   "source": [
+    "## Heading: Big Picture Topic\n",
+    "\n",
+    "Provide a broad overview of your topic. Include lots of citations!! This should be a thorough introduction to the topic you're sharing with us. If possible, use figures, equations, or provide links to relevant outside content.\n",
+    "\n",
+    "See some of the [markdown + equations](https://jupyterbook.org/en/stable/content/math.html) tutorials here. From that link: To insert in-line math use the `$` symbol within a Markdown cell. For example, the text `$this_{is}^{inline}$` will produce: $this_{is}^{inline}$.\n",
+    "\n",
+    "Adding `$$ equation stuff $$` on a new line makes the equation centered.\n",
+    "________"
    ]
   },
   {
@@ -23,7 +59,7 @@
    "id": "90d634f4-67d0-483c-970d-72749b827313",
    "metadata": {},
    "source": [
-    "## 1. Pick your favourite graph metric or distribution "
+    "## 1. Pick your favourite graph feature"
    ]
   },
   {
@@ -58,6 +94,23 @@
    "source": [
     "## 4. Maximum common subgraph"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a68ad0e8-41c9-4c09-bb32-647db7767439",
+   "metadata": {},
+   "source": [
+    "_______\n",
+    "\n",
+    "## References and further resources:\n",
+    "\n",
+    "1. Ref 1, useful website, etc.\n",
+    "2. Hartle, Klein, McCabe, Daniels, St-Onge, Murphy, & Hébert-Dufresne (2020). Network comparison and the within-ensemble graph distance. *Proceedings of the Royal Society A*, 476(2243), 20190744. doi: https://doi.org/10.1098/rspa.2019.0744.\n",
+    "3. etc\n",
+    "4. etc\n",
+    "\n",
+    "(Aim for 10+ useful citations)"
+   ]
   }
  ],
  "metadata": {
@@ -76,7 +129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
