--- a/assignments/graph similarities/chapter.ipynb
+++ b/assignments/graph similarities/chapter.ipynb
@@ -107,7 +107,7 @@
    "id": "85236711-7e96-4186-8c45-35a7eb6f8505",
    "metadata": {},
    "source": [
-    "## 2. Spectral metrics?"
+    "## 3. Spectral distances"
    ]
   },
   {
@@ -115,24 +115,8 @@
    "id": "62afaf9b-aaa5-4abc-8ffc-891911d9c97f",
    "metadata": {},
    "source": [
-    "## 3. Graph edit distance\n",
-    "\n",
-    "Graph Edit Distance is defined as the minimum cost sequence of edit operations needed to transform one graph G₁ into another graph G₂. Basic edit operations include:\n",
-    "\n",
-    "- Vertex insertion\n",
-    "- Vertex deletion\n",
-    "- Vertex substitution (relabeling)\n",
-    "- Edge insertion\n",
-    "- Edge deletion\n",
-    "- Edge substitution (relabeling)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6ce091a0-3680-4917-b35f-0015df5b3ec0",
-   "metadata": {},
-   "source": [
-    "## 4. Maximum common subgraph"
+    "## 4. Portrait divergence\n",
+    "\n"
    ]
   },
   {
